# dev-ex-mcp

./: .air.toml  .env  .env.example  .env.hyper.stable  .env.hyperion  .gitignore  2025-10-02-we-were-trying-to-install-hyperion-coordinator-mcp.txt  AI-BAND-MANAGER-SPEC.md  APPLY_PATCH_COMPLETION.md  APPLY_PATCH_FIX.md  ARCHIVE_SUMMARY.md  AUTOMATIC_TOOL_DISCOVERY_COMPLETE.md  CLAUDE.md  CLAUDE_AGENTS_IMPORT_IMPLEMENTATION.md  CLEANUP_COMPLETE.md  CORS_SOLUTION.md  CRITICAL_PATH_BUG_FIX.md  DEV_HOT_FIX_SUMMARY.md  DEV_HOT_IMPLEMENTATION_SUMMARY.md  DEV_HOT_QUICK_REFERENCE.md  DEV_HOT_TESTING.md  DEV_TARGETS_UPDATE_SUMMARY.md  DOCKER.md  DOCKER_REGISTRY.md  DOCKER_SETUP_SUMMARY.md  FILE_WATCHER_FIX.md  FIX_SUMMARY.md  GO_CODE_CONSOLIDATION_STATUS.md  HOT_RELOAD_GUIDE.md  HTTP_SETUP_COMPLETE.md  HYPERION_COORDINATOR_MCP_REFERENCE.md  IMPLEMENTATION_PROMPT.md  MAKEFILE_CLEANUP_SUMMARY.md  MAKEFILE_TEST_SUMMARY.md  MCP_AGENT_CONFIG.md  MCP_CHEAT_SHEET.md  MCP_MANAGEMENT_TOOLS_IMPLEMENTATION_COMPLETE.md  MCP_SERVER_MANAGEMENT_TOOLS.md  MCP_TOOLS_ANALYSIS.md  MCP_TOOLS_IMPLEMENTATION_COMPLETE.md  (+36 more)
.claude/: mcp_servers.json  schema-standards.md  settings.json  settings.local.json
code-indexing-mcp/: main.go
coordinator/: CLAUDE_MCP_ADD_INSTALLATION.md  COORDINATION_PROMPTS_USAGE_EXAMPLES.md  DEV_SETUP.md  DOCKER_INSTALLATION.md  Dockerfile.dev  FULL_STACK_SETUP.md  HOT_RELOAD_SETUP_COMPLETE.md  HTTP_INSTALLATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  KNOWLEDGE_PROMPTS.md  (+20 more)
desktop-app/src-tauri/: Cargo.toml
desktop-app/src-tauri/icons/: README.md
(+483 files in other folders)
